--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,19 @@ allprojects {
         maven { url "https://dl.bintray.com/mockito/maven" }
         flatDir { dirs "$rootProject.projectDir/shared/libs" }
     }
+
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                details.useVersion ANDROID_SUPPORT_VERSION
+            } else if (requested.group == 'com.google.firebase') {
+                details.useVersion FIREBASE_VERSION
+            } else if (requested.group == 'com.github.bumptech.glide') {
+                details.useVersion GLIDE_VERSION
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
