--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ COMPILE_SDK=27
 USE_JACK=false
 
 KOTLIN_VERSION=1.1.51
-ANDROID_GRADLE_VERSION=3.0.0-rc2
+ANDROID_GRADLE_VERSION=3.1.0-alpha01
 BUILD_TOOLS_VERSION=27.0.0
 ANDROID_SUPPORT_VERSION=27.0.0
 WEARABLE_SUPPORT_VERSION=2.0.4
@@ -34,5 +34,5 @@ ROBOLECTRIC_VERSION=3.4.2
 GLIDE_VERSION=4.2.0
 RETROFIT_VERSION=2.3.0
 
-FIREBASE_VERSION=11.4.0
-GOOGLE_PLAY_SERVICES_VERSION=11.4.0
+FIREBASE_VERSION=11.4.2
+GOOGLE_PLAY_SERVICES_VERSION=11.4.2
